add text list with js to project

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 .container {
   width: 80%;
-  height: 600px;
+  height: 140%;
   border: 2px solid black;
   border-radius: 3%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -14,9 +14,21 @@
   text-align: right;
   background-color: rgb(183, 243, 158, 0.8);
 }
-h1 {
+h2 {
   font-family: mjflow;
 }
 .input-group {
+  font-family: mjflow;
+}
+.p {
+  font-family: mjflow;
+  font-size: 17px;
+  font-weight: 800;
+}
+.inline {
+  display: flex;
+  margin-top: 5px;
+}
+.button {
   font-family: mjflow;
 }
